<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">QueueSmart</string>
    <string name="action_settings">Settings</string>
    <string name="demo_min_label">Min</string>
    <string name="demo_max_label">Max</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_home">HomeActivity</string>
	<string name="description">Description</string>	
	<string name="title_left_menu">QueueSmart.ly</string>
	<string name="title_now">Now</string>
	<string name="title_expired">Expired</string>
	<string name="sign_in">Sign In</string>
	<string name="title_birthday_project">Brithday Projects</string>
	<string name="title_project_add">Project Add</string>
	<string name="title_store_name">Store Name:</string>
	<string name="title_provider_telephone">Provider Telephone</string>
	<string name="title_country">City </string>
	<string name="title_amount">Amount</string>
	<string name="title_message">Message</string>
	<string name="title_expired_date">Expired At</string>
	<string name="title_inviter">Inviters</string>
	<string name="title_add">Add</string>
	<string name="title_username">Username</string>
	<string name="title_email">Email</string>
	<string name="title_phonenumber">Phone Number</string>
	<string name="title_password">Password</string>
	<string name="title_confirm">Confirm Password</string>
	<string name="title_project">Project Title</string>
	<string name="title_reciever_number">Receiver Tel</string>
	<string name="title_project_country">Country</string>
	<string name="title_project_amount">Amount:</string>
	<string name="title_project_invite">Inviters:</string>
	<string name="title_project_expired">Expired At:</string>
	<string name="title_project_payers">Payers</string>
	<string name="sign_up">Sign Up</string>
	<string name="title_back_button">Back</string>
	<string name="txt_forgot_password">Forgot Password</string>
	<string name="txt_new_here">New here ? Sign Up</string>
	<string name="txt_sign_in">Sign In</string>
	<string name="menu_home">Home</string>
	<string name="menu_sign_out">Sign Out</string>
	<string name="menu_add_Project">Add Project</string>
	<string name="title_next_button">Next</string>
	<string name="title_available_amount">Available Amount:</string>
	<string name="title_gift_amount">Amount to Send</string>
	<string name="title_bank_info">Bank Info</string>
	<string name="title_bank_send">Send</string>
	<string name="login_hint">Email address</string>
	<string name="password_hint">Password</string>
	<string name="bank_transfer">Bank Transfer</string>
	<string name="title_done_button">Done</string>
	<string name="title_project_inviteAdd">+ Add More</string>
	<string name="title_project_projectAdd">+ Add From Contacts</string>
	<string name="titleProjectAamount">Amount:</string>
	<string name="titleProjectCrowded">Crowded Amount:</string>
	<string name="titleProjectExpired">Expired At:</string>
	<string name="projectDetail">Project Detail</string>
	<string name="title_project_message">Message</string>
	<string name="title_all_contact">Contacts</string>
	<string name="title_bank_transfer">Bank Transfer</string>
	<string name="title_shopping">Shopping</string>
	<string name="title_addInviter">Add Inviter</string>
	<string name="txt_project_detail">Project Detail</string>
	<string name="txt_close">Close</string>
	<string name="title_project_viewMore">View More</string>
	<string name="title_friend_choose">Friend Choose the Gift</string>
	<string name="title_deliverToMe">Deliver To Me</string>
	<string name="title_deliverToOther">Deliver To Friend</string>
	<string name="txtSignUp">Sign Up for QueueSmart.ly</string>
	<string name="title_search">Search</string>
	<string name="title_company_name">Company Name</string>
	<string name="title_category_name">Category</string>
	<string name="title_city_name">City</string>
	<string name="txt_waitingTime">Waiting Time(min)</string>
	<string name="txt_semicolon">:</string>
	<string name="txt_min">min</string>
	<string name="txt_wating_all">All (Waiting Time)</string>
	<string name="titleEstimatedWaiting">Estimated Waiting</string>
	<string name="txt_currentString">Current :</string>
	<string name="txt_last">Last :</string>
	<string name="txt_apply">Apply</string>
	<string name="title_search_result">Search Result</string>
	<string name="txt_company_name">Company Name:</string>
	<string name="title_waiting_name">Waiting Time:</string>
	<string name="title_next_number">Next Number:</string>
	<string name="title_category">Category:</string>
	<string name="title_city">City:</string>
	<string name="title_address">Address:</string>
	<string name="title_total_customer">Total Customers Served:</string>
	<string name="title_waiting_time">Waiting Time:</string>
	<string name="title_current_number">Currnet Number:</string>
	<string name="title_store_detail">Store Detail:</string>
	<string name="title_detail">Detail</string>
	<string name="txt_my_waiting">My Queue No:</string>
	<string name="menu_status">Status</string>
	<string name="titleAddress">Address</string>
	<string name="txtSearchNo">There is no result.</string>
	<string name="title_status">Status</string>
</resources>
